# TeleCafezinho

./: .gitignore  README.md  partitions_4mb.csv  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json
components/tele_cafezinho/: CMakeLists.txt  Kconfig  tele_cafezinho.c  tele_cafezinho_commands.c  tele_cafezinho_config.c  tele_cafezinho_gpio.c  tele_cafezinho_mqtt.c  tele_cafezinho_peers.c  tele_cafezinho_status.c
components/tele_cafezinho/include/: tele_cafezinho.h  tele_cafezinho_commands.h  tele_cafezinho_config.h  tele_cafezinho_gpio.h  tele_cafezinho_mqtt.h  tele_cafezinho_peers.h  tele_cafezinho_status.h
components/tele_cafezinho/test/: tele_cafezinho_config_defaults_test.c  tele_cafezinho_mqtt_payload_test.c  tele_cafezinho_peers_test.c  tele_cafezinho_state_test.c  tele_cafezinho_status_channels_test.c
docs/: arquitetura_index.md  tele_cafezinho.md
docs/superpowers/plans/: 2026-06-29-telecafezinho-domain-component.md  2026-07-03-telecafe-device-list-columns.md
docs/superpowers/specs/: 2026-07-03-telecafe-device-list-design.md
firmware_assets/web/: settings.html  status.html
main/: CMakeLists.txt  app_firmware_version.h  app_indicators.c  idf_component.yml  main.c
tools/mqtt_desktop/: config.example.json  mqtt_control_center.py  test_telecafe_device_list.py
